MBS-6276: Remove padding/fix alignment of lists in edits
Removes the list bullet image and extra padding for lists inside the details of
an edit. This was requested in MBS-6276 for release events, but the fix here
affects all edit types to be consistent.

--- a/root/static/styles/layout.less
+++ b/root/static/styles/layout.less
@@ -892,6 +892,16 @@ table.details td.old {
     border: 1px solid #CCC;
 }
 
+table.details td { vertical-align: top; }
+
+table.details td.new ul,
+table.details td.old ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    list-style-image: none;
+}
+
 /* Statistics pages */
 table.timeline-controls, table.database-statistics {
     border-collapse: collapse;
